# bienensteff.de

./: .gitignore  .gitmodules  LICENSE  build.mjs  flake.nix  go.mod  hugo.toml  justfile  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: data.yml  deploy.yml  trachtnet.yml
assets/: main.scss
assets/css/: beetable.css  fc.css  grid.css  main-old.css  main.css  sortable.css
assets/db/: db.json
assets/js/: beetable.ts  calendars.ts  dates.ts  helpers.ts  main.ts  youtube.ts
assets/scss/: fc.scss
assets_src/js/: helpers.ts  main.ts
bundle_src/css/: style.css
bundle_src/js/: calendars.ts  dates.ts  helpers.ts  main.ts  regions.ts  render.ts  trachtnet.ts
content/: _index.md  datenschutz.md  impressum.md
content/about/: index.md
content/bestellanfrage/: bestelldanke.md  bestellformular.md
content/database/: _content.gotmpl  database.json  index.md
content/datenbank/: _content.gotmpl  index.md
content/honigkunde/: index.md
content/rezepte/: _index.md
content/sale/: index.md
content/schwaerme-und-nester/: index.md
content/schwarm-und-nest/: index.md
content/tools/: _index.md  infos.md  liebefeld.md  phasen.md  tub.md
content/verkauf/: _index.md  (+2 more)
data/: preisliste.json  sortiment.yaml  verkaufsstellen.yaml
layouts/: index.html
scripts/: dump-db-sql.py  dump-db.py  dump-dwd.py  dump-trachtnet.py  gen-bestellform.py  gen-pricelist.py  gen-trachtnet.py  lexware-download.py  pyproject.toml
scripts/data/: wetter-oberpfaffenhofen-saison-2023.csv  wetter-oberpfaffenhofen-saison-2024.csv
(+8153 files in other folders)
